# snowflake_dbt_airflow_pipeline

./: README.md  pyproject.toml
dags/dbt/data_pipeline/: dbt_project.yml
data_pipeline/models/staging/: stg_tpch_line_items.sql  tpch_sources.yml
