[tool.poetry]
name = "snowflake-dbt-airflow-pipeline"
version = "0.1.0"
description = ""
authors = ["Kirill Bazarov <kl.bazarov@gmail.com>"]
readme = "README.md"
packages = [{include = "snowflake_dbt_airflow_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

